# dyloader

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  stamp.h
include/dyloader/: arch.h  buffer.h  builtin-host.h  dyloader.h  errno.h  format.h  host.h  types.h
include/libexec/: arch.h  buffer.h  error.h  mode.h  system.h
lib/: CMakeLists.txt  Makefile  buffer.c  builtin.c  dyloader-test.c  dyloader.c  elf.c  elf.h  format-elf.c  format-elf.h  format.c  host-linux.c  host.c  system.c  test.h
make/: config.mk  patterns.mk
src/: Makefile  sample.c  system-test.c
utils/: CMakeLists.txt  dyloader.c
